# pg-capture

./: .dockerignore  .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: development.toml  docker.toml  example-with-env.toml  example.toml  minimal.toml  production.toml
docs/: checkpoint-design.md  implementation-phase-1.md  prd.md
examples/: test_copyboth.rs
scripts/: init-db.sql  quickstart.sh  release.sh
src/: checkpoint.rs  config.rs  error.rs  lib.rs  main.rs  replicator.rs
src/kafka/: key_strategy.rs  mod.rs  producer.rs  serializer.rs  tests.rs  topic_manager.rs
src/postgres/: connection.rs  connection_limitations.md  decoder.rs  decoder_tests.rs  mod.rs  replication.rs  test_utils.rs  type_parser_tests.rs  types.rs
tests/: README.md  checkpoint_test.rs  exactly_once_test.rs  failure_scenarios_test.rs  integration_test.rs  performance_test.rs  run_integration_tests.sh
tests/common/: mod.rs
