[package]
name = "pg-capture"
version = "0.1.0"
edition = "2021"
authors = ["pg-capture contributors"]
description = "PostgreSQL to Kafka CDC replicator using logical replication"
license = "MIT"
repository = "https://github.com/yourusername/pg-capture"
homepage = "https://github.com/yourusername/pg-capture"
documentation = "https://github.com/yourusername/pg-capture#readme"
readme = "README.md"
keywords = ["postgresql", "kafka", "cdc", "replication", "streaming"]
categories = ["database", "command-line-utilities"]
exclude = [
    ".github/",
    "tests/",
    "scripts/",
    "docker-compose.yml",
    ".dockerignore"
]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4"] }
postgres-protocol = "0.6"
tokio-stream = "0.1"
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.8"
base64 = "0.22"
futures = "0.3"
anyhow = "1.0"
fallible-iterator = "0.2"

[dev-dependencies]
tempfile = "3.10"
testcontainers = "0.23"

[[example]]
name = "test_copyboth"
path = "examples/test_copyboth.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true